security fix: prevent users from signing up the same shift twice

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,4 +13,7 @@
  */
 
 @import "bootstrap";
-/*@import "bootstrap/theme"*/
+
+#footer {
+  margin-top: 20px;
+}
